<resources>
    <string name="app_name">TestApp</string>
<string name="copyright">Copyright © 2015 – 2022 Michael Farrell</string>
<string name="license">Licences</string>
<string name="title_activity_license">Open source licences</string>
<string name="directions">Tap a card.</string>
<string name="reading_card">Reading card…</string>
<string name="dont_move">Do not move card</string>
<string name="advanced_info">Advanced info</string>
<string name="delete_card">Delete card</string>
<string name="unknown_card">Unknown card</string>
<string name="locked_mfc_card">Locked MIFARE Classic card</string>
<string name="locked_mfu_card">Locked MIFARE Ultralight card</string>
<string name="locked_mfd_card">Locked MIFARE DESFire card</string>
<string name="hw_detail">Manufacturing info</string>
<string name="data">Raw Data</string>
<string name="copy_xml">Copy</string>
<string name="share_xml">Share</string>
<string name="save_xml">Save to File</string>
<string name="history">History</string>
<string name="dstme_tab">DSTME</string>
<string name="results_tab">Results</string>
<string name="no_trip_data">No trips found. Has this card been used?</string>
<string name="import_xml">Import</string>
<string name="import_clipboard">Paste from clipboard</string>
<string name="import_file">Import from file</string>
<string name="export">Export</string>
<string name="issue_print_ticket"><![CDATA[Issue & Print Ticket]]></string>
<string name="activity_intent_filter_action">dstme.eid.ACTION</string>
<string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
<string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
<string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
<string name="export_filename">Export filename</string>
<string name="export_all">Export all</string>
<string name="about">About</string>
<string name="preferences">Preferences</string>
<string name="balance_speech">Balance <xliff:g id="balance" example="$13.37">%s</xliff:g></string>
<string name="loading">Loading…</string>
<string name="scanned_at_format">Scanned at %1$s on %2$s</string>
<string name="supported_cards">Supported cards</string>
<string name="transaction_counter">Transaction counter</string>
<string name="fully_locked_desc">
        No part of this card is freely readable without a key and currently this format has no practical vulnerabilities.\n\n
        Your card is not supported  and it is unlikely it will ever be, unless the key for it is deciphered.\n\n
        Please lobby the card issuer to allow open data access on issued cards. It is safe to permit open, read-only access to data with modern smartcard technology. Some agencies even provide open documentation about the data format!
    </string>
<string name="fully_locked_desc_unlockable">No part of this card is freely readable without a key. You have no valid keys installed for it.
\n
\nThe card will work once keys are installed for it. These are generally different for each card. More info about acquiring and installing keys can be found in the documentation.
\n
\nPlease lobby the card issuer to allow open data access on issued cards. It is safe to permit open, read-only access to data with modern smartcard technology. Some agencies even provide open documentation about the data format!</string>
<string name="fully_locked_title">Fully locked card.</string>
<string name="nfc_off_error">NFC off</string>
<string name="turn_on_nfc">Please enable NFC to read card info.</string>
<string name="nfc_settings">NFC settings</string>
<string name="machine_id_format">Machine ID %s</string>
<string name="machine_id">Machine ID</string>
<string name="last_refill">Last refill</string>
<string name="unknown_card_header">Unsupported card format</string>
<string name="unknown_card_description">This card is not yet supported. Only raw data can be displayed.</string>
<string name="unknown_more_info">More info</string>
<string name="unknown_more_info_desc">Tap for more info for this card.</string>
<string name="lawyercats">DSTME LLC</string>
<string name="scanned_cards">History</string>
<string name="no_scanned_cards">You have not scanned any cards.</string>
<string name="block_title_format">Block: %s</string>
<string name="block_title_format_unauthorized">Block: %s (unauthorized)</string>
<string name="application_title_format">Application: %s</string>
<string name="mfc_aid_title_format">MIFARE Classic AID: %1$s #%2$d</string>
<string name="file_title_format">File: %s</string>
<string name="unauthorized_file_title_format">File: %s (unauthorized)</string>
<string name="invalid_file_title_format">File: %1$s (invalid: %2$s)</string>
<string name="page_title_format">Page: %s</string>
<string name="page_title_format_empty">Page: %s (empty)</string>
<string name="unauthorized_page_title_format">Page: %s (unauthorized)</string>
<string name="nfcv_system_info">System info</string>
<string name="sector_title_format">Sector: %s</string>
<string name="unauthorized_sector_title_format">Sector: %s (unauthorized)</string>
<string name="sector_title_format_empty">Sector: %s (empty)</string>
<string name="invalid_sector_title_format">Sector: %1$s (invalid: %2$s)</string>
<string name="felica_system_title_format">System: %1$s (%2$s)</string>
<string name="felica_service_title_format">Service: %1$s (%2$s)</string>
<string name="record_title_format">Record: %s</string>
<string name="binary_title_format">Binary data</string>
<string name="info">Info</string>
<string name="valid_format">Valid from %1$s to %2$s</string>
<string name="valid_to_format">Valid until %1$s</string>
<string name="valid_from_format">Valid from %1$s</string>
<string name="valid_origin_destination">Valid from %1$s to %2$s</string>
<string name="valid_origin_destination_via">Valid from %1$s to %2$s via %3$s</string>
<string name="subscription_cost">Cost</string>
<string name="unknown_format">Unknown (%s)</string>
<string name="unknown">Unknown</string>
<string name="never">Never</string>
<string name="keys_required">Encryption keys are required to read this card.</string>
<string name="keys_loaded">Encryption keys for this card are loaded.</string>
<string name="load_keys">Load Keys</string>
<string name="card_keys_not_supported">App does not support keys for this type of card.</string>
<string name="add_key">Add Key</string>
<string name="error">Error</string>
<string name="keys">Keys</string>
<string name="delete">Delete</string>
<string name="delete_key_confirm_title">Really delete key?</string>
<string name="rejected">Rejected</string>
<string name="delete_key_confirm_message">The key file "<xliff:g id="description" example="a1b2c3d4">%1$s</xliff:g>" (containing <xliff:g id="key_type" example="1 MIFARE Classic key">%2$s</xliff:g>) will be gone forever.</string>
<string name="cant_delete_with_obfuscation">Deleting keys is currently unavailable</string>
<string name="cant_delete_with_obfuscation_message">For safety reasons, you can\'t delete keys while card number obfuscation is enabled. Turn it off if you want to delete keys.</string>
<string name="add_key_directions">Save a binary dump of your keys as a file with a .farebotkeys extension, e-mail it as an attachment to yourself, and then open it on this device.</string>
<string name="no_keys">No keys.</string>
<string name="nfc_unavailable">NFC unavailable</string>
<string name="general">General</string>
<string name="launch_from_background">Launch from background</string>
<string name="checksum">Checksum</string>
<string name="last_transaction">Last transaction</string>
<string name="date">Date</string>
<string name="time">Time</string>
<string name="vehicle_type">Vehicle type</string>
<string name="transaction_type">Transaction type</string>
<string name="card_epoch">Card Epoch</string>
<string name="card_not_supported_on_device">This card is not supported by your device.</string>
<string name="need_stations">Some station names are unknown.</string>
<string name="need_stations_submit">Report</string>
<string name="card_preview_reader">Beta version of card reader.</string>
<string name="visit_website">Visit Website</string>
<string name="title_activity_about">About</string>
<string name="card_format">Card format</string>
<string name="select_file">Select file</string>
<string name="copied_to_clipboard">Copied to clipboard</string>
<string name="saved_metrodroid_zip">DSTME-Export.zip saved to USB storage.</string>
<string name="saved_xml_custom">XML saved to USB storage.</string>
<string name="file_exported">File exported.</string>
<string name="map_tiles_url">Map tiles URL</string>
<string name="map_tiles_url_summary">Use a custom tile server for embedded maps, using Leaflet TileLayer syntax.</string>
<string name="map_tiles_subdomains">Map tile subdomains</string>
<string name="map_tiles_subdomains_summary">If using {s} in map URLs, a comma separated list of subdomains, or single-character list of subdomains.</string>
<string name="map_tiles_help">View Leaflet TileLayer documentation</string>
<string name="map_tiles_help_summary">For help on using map tile URLs, see Leaflet\'s online documentation (only available in English).</string>
<string name="about_card_format">About this card format</string>
<string name="online_services">Online services</string>
<string name="mifare_classic">MIFARE Classic</string>
<string name="auth_retries">Authentication retries</string>
<string name="auth_retries_summary">Number of times to attempt authentication for each sector</string>
<string name="mfc_fallback_desc">Some agencies have no identifying magic on their card. To read them, you must select an agency explicitly.</string>
<string name="mfc_fallback">Fallback reader</string>
<string name="requires_android_17">Requires Android 4.2 or later.</string>
<string name="requires_android_21">Requires Android 5.0 or later.</string>
<string name="pref_hide_unsupported_ribbon">Hide ‘not supported’ ribbon</string>
<string name="pref_hide_unsupported_ribbon_desc_off">Cards which cannot be read by this device will have a red ‘not supported’ warning displayed over its artwork</string>
<string name="pref_hide_unsupported_ribbon_desc_on">Unsupported cards will not have anything covering their artwork</string>
<string name="obfuscation_title">Obfuscation</string>
<string name="obfuscation_card_numbers">Hide card numbers</string>
<string name="obfuscation_card_numbers_desc">Don\'t show card numbers anywhere</string>
<string name="obfuscation_balance">Obfuscate balance</string>
<string name="obfuscation_balance_desc">Change the balance shown by a random amount</string>
<string name="obfuscation_dates">Obfuscate dates</string>
<string name="obfuscation_dates_desc">Show trip, subscription, expiry and scan dates as different, random days</string>
<string name="obfuscation_times">Obfuscate times</string>
<string name="obfuscation_times_desc">Fuzz and reduce resolution of timestamps on trips, subscriptions, and scans</string>
<string name="obfuscation_fares">Obfuscate fares</string>
<string name="obfuscation_fares_desc">Change fares shown by a random amount</string>
<string name="accessibility">Accessibility</string>
<string name="speak_balance">Speak balance aloud</string>
<string name="speak_balance_summary">When you scan a card, the balance will be automatically read aloud. This works even when a screen reader is not running.</string>
<string name="localise_places">Add language hints to place names</string>
<string name="localise_places_desc">Adds language hints (LocaleSpan) to place names, such as station, stop, line and route names. This alters the pronunciation used by screen readers and other accessibility software.</string>
<string name="localise_places_longdesc_button">About language hints…</string>
<string name="localise_places_longdesc_title">About language hints</string>
</resources>