<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/need_stations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:background="#FF4444"
            android:visibility="gone">
            <TextView
                android:id="@+id/need_stations_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/need_stations"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
            <Button
                    android:id="@+id/need_stations_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/need_stations_submit"
                    android:layout_marginStart="8dp"/>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"

            android:layout_height="0dp" >
        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
                android:id="@+id/unauthorized_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:background="#FF4444"
                android:layout_gravity="bottom"
                android:visibility="gone">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/keys_required"
                    android:gravity="center_vertical"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            <Button
                    android:id="@+id/load_keys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="@string/load_keys"
                    android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
